base structure for rabbitmq consumers/producers

--- a/Armory/appsettings.Development.json
+++ b/Armory/appsettings.Development.json
@@ -9,5 +9,9 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Information",
       "Armory": "Debug"
     }
+  },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": "5672"
   }
 }
