add Serilog to process and dump log

--- a/Game/appsettings.json
+++ b/Game/appsettings.json
@@ -2,13 +2,9 @@
   "ConnectionStrings": {
     "GameDb": "Host=localhost;Database=game_db;Username={0};Password={1}"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
-      "Armory": "Information"
-    }
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": "5672"
   },
   "AllowedHosts": "*"
 }
