sync data services and item actions

--- a/Armory/appsettings.Development.json
+++ b/Armory/appsettings.Development.json
@@ -5,5 +5,8 @@
   "RabbitMQ": {
     "Host": "localhost",
     "Port": "5672"
+  },
+  "GameService": {
+    "BaseUrl": "http://localhost:5058"
   }
 }
