--- a/Armory/appsettings.json
+++ b/Armory/appsettings.json
@@ -6,5 +6,8 @@
     "Host": "localhost",
     "Port": "5672"
   },
+  "GameService": {
+    "BaseUrl": "http://localhost:5058"
+  },
   "AllowedHosts": "*"
 }
