--- a/Game/appsettings.Development.json
+++ b/Game/appsettings.Development.json
@@ -5,5 +5,8 @@
   "RabbitMQ": {
     "Host": "localhost",
     "Port": "5672"
+  },
+  "ArmoryService": {
+    "BaseUrl": "http://localhost:5274"
   }
 }
