--- a/Game/appsettings.json
+++ b/Game/appsettings.json
@@ -6,5 +6,8 @@
     "Host": "localhost",
     "Port": "5672"
   },
+  "ArmoryService": {
+    "BaseUrl": "http://localhost:5274"
+  },
   "AllowedHosts": "*"
 }
