publish logs to elk stack

--- a/Armory/appsettings.Development.json
+++ b/Armory/appsettings.Development.json
@@ -8,5 +8,8 @@
   },
   "GameService": {
     "BaseUrl": "http://localhost:5058"
+  },
+  "Elasticsearch": {
+    "Url": "http://localhost:9200"
   }
 }
