--- a/Armory/appsettings.json
+++ b/Armory/appsettings.json
@@ -9,5 +9,8 @@
   "GameService": {
     "BaseUrl": "http://localhost:5058"
   },
+  "Elasticsearch": {
+    "Url": "http://localhost:9200"
+  },
   "AllowedHosts": "*"
 }
