--- a/Game/appsettings.Development.json
+++ b/Game/appsettings.Development.json
@@ -6,6 +6,9 @@
     "Host": "localhost",
     "Port": "5672"
   },
+  "Elasticsearch": {
+    "Url": "http://localhost:9200"
+  },
   "ArmoryService": {
     "BaseUrl": "http://localhost:5274"
   }
