distributed tracing, open telemetry + jaeger

--- a/Armory/appsettings.Development.json
+++ b/Armory/appsettings.Development.json
@@ -11,5 +11,9 @@
   },
   "Elasticsearch": {
     "Url": "http://localhost:9200"
+  },
+  "Jaeger": {
+    "Host": "localhost",
+    "Port": "6831"
   }
 }
