--- a/Armory/appsettings.json
+++ b/Armory/appsettings.json
@@ -12,5 +12,9 @@
   "Elasticsearch": {
     "Url": "http://localhost:9200"
   },
+  "Jaeger": {
+    "Host": "localhost",
+    "Port": "6831"
+  },
   "AllowedHosts": "*"
 }
