--- a/Game/appsettings.Development.json
+++ b/Game/appsettings.Development.json
@@ -9,6 +9,10 @@
   "Elasticsearch": {
     "Url": "http://localhost:9200"
   },
+  "Jaeger": {
+    "Host": "localhost",
+    "Port": "6831"
+  },
   "ArmoryService": {
     "BaseUrl": "http://localhost:5274"
   }
